workspace = { members = ["wspr_cdk_server"] }
[package]
name = "wspr_cdk"
version = "0.0.7"
edition = "2021"
authors = ["Irfan Ghat"]
description = "This crate provides an abstraction that allows you to do analysis on wspr's real time spot data."
homepage = "https://github.com/lexara-prime-ai/wspr_cdk"
repository = "https://github.com/lexara-prime-ai/wspr_cdk"
readme = "README.md"
keywords = ["radio", "web", "http", "api"]
categories = ["web-programming::http-server", "science::geo"]
license = "BSD-1-Clause"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clickhouse = "0.11.6"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }


