[tool.poetry]
name = "hyper"
version = "0.1.0"
description = ""
authors = ["lexara-prime-ai <irfanghat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# poetry add requests@latest
# poetry install